--- a/angular.json
+++ b/angular.json
@@ -26,13 +26,19 @@
 							{
 								"glob": "**/*",
 								"input": "public"
-							}
+							},
+              {
+                "glob": "**/*",
+                "input": "node_modules/@arcgis/core/assets",
+                "output": "assets"
+              }
 						],
 						"styles": [
 							"src/themes/theme.scss",
 							"src/styles.scss",
 							"node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-							"node_modules/ngx-spinner/animations/ball-scale-multiple.css"
+							"node_modules/ngx-spinner/animations/ball-scale-multiple.css",
+              "node_modules/@arcgis/core/assets/esri/themes/light/main.css"
 						],
 						"scripts": []
 					},
