--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@arcgis/map-components": "^4.33.10",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.3.0",
+    "chart.js": "^4.5.0",
     "ngx-sonner": "^3.0.0",
     "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
