--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "axios": "^1.3.0",
     "chart.js": "^4.5.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "ngx-sonner": "^3.0.0",
     "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
