--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "axios": "^1.3.0",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.2",
     "ngx-sonner": "^3.0.0",
     "ngx-spinner": "^17.0.0",
     "rxjs": "~7.8.0",
