--- a/package.json
+++ b/package.json
@@ -25,13 +25,18 @@
     "@arcgis/core": "^4.33.9",
     "@arcgis/map-components": "^4.33.10",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@mapbox/togeojson": "^0.16.2",
+    "@tmcw/togeojson": "^7.1.2",
+    "@xmldom/xmldom": "^0.8.11",
     "axios": "^1.3.0",
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.2",
+    "jszip": "^3.10.1",
     "ngx-sonner": "^3.0.0",
     "ngx-spinner": "^17.0.0",
+    "proj4": "^2.19.10",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -43,7 +48,10 @@
     "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~5.1.0",
     "@types/jest": "^29.5.14",
+    "@types/jszip": "^3.4.0",
     "@types/mocha": "^10.0.10",
+    "@types/proj4": "^2.5.6",
+    "@types/xmldom": "^0.1.34",
     "autoprefixer": "^10.4.21",
     "init": "^0.1.2",
     "jasmine-core": "~5.5.0",
